<resources>
    <string name="app_name">STUDY GUIDE</string>
    <string name="intro_madeby" translatable="false">made by Naul Snow</string>

    <string name="coming_soon">Coming soon..</string>

    <string name="login_id">ID</string>
    <string name="login_psw">Password</string>
    <string name="login_continue">CONTINUE</string>
    <string name="login_lostpsw">Forgot your password?</string>

    <string name="login_fail01">An ERROR has occurred.</string>
    <string name="login_fail02">This user doesn\'t exist.</string>
    <string name="login_fail03">Failed to connect to the server.</string>

    <string name="dialog_positive">Okay</string>
    <string name="dialog_negative">Cancel</string>

    <string name="test_submit">Are you sure you want to submit?\\nYou cannot change your answers anymore.</string>

    <string name="f1_home">Home</string>
    <string name="f2_feed">Feed</string>
    <string name="f3_study">Study</string>
    <string name="f4_report">Report</string>
    <string name="f5_setting">Setting</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="delete_studyset_msg">Are you sure you want to delete this study set?\nAll your records will be deleted.</string>


    <string name="first_info01">Nickname</string>
    <string name="first_info02">Age</string>
    <string name="first_info03">Interests</string>
    <string name="first_info04">Settings</string>
    <string name="first_info05">Welcome\nEnjoy your first\nSTUDY GUIDE</string>

    <string name="first_next">next</string>
    <string name="first_start">Start</string>

    <string name="first_warning01">The text box is Empty.</string>
    <string name="first_warning02">This nickname already exists.</string>

    <string name="error_basic">Unexpected ERROR has occured.\nPlease try again.</string>

    <string name="action_refresh">Refresh</string>
    <!--<string name="loading">Loading</string>-->

    <string name="f3_questions_sets">Questions Sets</string>
    <string name="f3_studied_times">Studied Times</string>
    <string name="f3_studied_hours">Studied Mins</string>

    <string name="addset_actitle">Add a Set</string>

    <string name="addset_setting_setting">Setting</string>
    <string name="addset_setting_privacy">Privacy</string>
    <string name="addset_setting_public">\tpublic</string>
    <string name="addset_setting_private">\tprivate</string>

    <string name="addset_title">Title*</string>
    <string name="addset_info">Info</string>
    <string name="addset_area">Area</string>
    <string name="addset_submit">Submit</string>
    <string name="addset_hint_title">what is the title of this set?</string>
    <string name="addset_hint_info">What is this set about?</string>
    <string name="addset_setting">Detailed Settings</string>

    <string name="addset_submit_fail01">Title is missing.</string>
    <string name="addset_submit_fail02">Question is missing.</string>
    <string name="addset_submit_fail03">Answer is missing.</string>
    <string name="addset_submit_fail04">Question should include at least one correct answer.</string>
    <string name="addset_submit_fail05">Failed to upload. Please try again.</string>

    <string name="addset_addstart">Add a new</string>
    <string name="addset_addend">question</string>

    <string name="studymain_storage">Storage</string>
    <string name="studymain_study">Study</string>
    <string name="studymain_play">Play</string>
    <string name="studymain_report">Report</string>

    <string name="studymain_overall01">Questions</string>
    <string name="studymain_overall02">Studied Times</string>
    <string name="studymain_overall03">Studied Hours</string>

    <string name="q_basic_question">Question </string>
    <string name="q_basic_quesitonhint">Question goes here.</string>
    <string name="q_basic_answer">Answer</string>
    <string name="q_basic_answerhint">Answer goes here.</string>
    <string name="q_basic_explanation">Explanation</string>
    <string name="q_basic_explanationhint">Explanation goes here.</string>

    <string name="q_type_1">Basic Type</string>
    <string name="q_type_2">Right or Wrong</string>
    <string name="q_type_3">One Answer Type</string>
    <string name="q_type_4">Order Type</string>

    <string name="q2_qstart">Which of the following is</string>
    <string name="q2_qend">about</string>

    <string name="study_tvrorw_opening">Let\'s start!</string>
    <string name="study_tvrorw_right">Right</string>
    <string name="study_tvrorw_wrong">Wrong</string>

    <string name="studystudy_study">Study</string>
    <string name="studystudy_test">Test</string>

    <string name="study_igotitright">I got it RIGHT</string>
    <string name="study_igotitwrong">I got it WRONG</string>

    <string name="test_welcome" translatable="false">WELCOME</string>

    <string name="testsetting_setting">Setting</string>
    <string name="testsetting_questions">Questions</string>
    <string name="testsetting_studyall">\tstudy all</string>
    <string name="testsetting_default">\tdefault</string>
    <string name="testsetting_timelimits">Time Limits</string>
    <string name="testsetting_nolimits">\tno limits</string>
    <string name="testsetting_min">min</string>
    <string name="testsetting_typingquestions">Typing Questions</string>
    <string name="testsetting_includetypingquestions">\tinclude typing questions</string>
    <string name="testsetting_notypingquestions">\tno typing questions</string>

    <string name="test_myanswer">My Answer</string>
    <string name="test_properanswer">Proper Answer</string>

    <string name="report_testscores">Test Scores</string>
    <string name="storage_youcannoteditthis">You cannot edit this.</string>

    <!-- FEED -->

    <string name="addfeed_hint">What\'s on your mind?</string>
    <string name="comment_hint">Add a Comment</string>
    <string name="comment_btn">Send</string>

</resources>
