<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/small_padding"
    android:padding="@dimen/normal_padding"
    android:background="@color/colorLighterSkyBlue">

    <ImageView
        android:id="@+id/btn_clear"
        android:layout_width="@dimen/big_padding"
        android:layout_height="@dimen/big_padding"
        android:src="@drawable/ic_clear"
        android:tint="@color/colorGray"
        android:layout_alignParentRight="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q_basic_question"
                android:textStyle="bold"
                android:textSize="@dimen/txt_text"
                android:textColor="@color/colorDeepGray"
                android:layout_marginRight="@dimen/tiny_padding"/>
            <TextView
                android:id="@+id/tv_question_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textStyle="bold"
                android:textSize="@dimen/txt_text"
                android:textColor="@color/colorDeepGray"
                android:layout_marginRight="@dimen/small_padding"/>

            <TextView
                android:id="@+id/tv_question_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_stext"
                android:text="@string/q_type_1"
                android:textColor="@color/colorBlueGray"/>

            <!--<ImageView-->
                <!--android:id="@+id/iv_camera"-->
                <!--android:layout_width="@dimen/normal_padding"-->
                <!--android:layout_height="@dimen/normal_padding"-->
                <!--android:src="@drawable/ic_camera"-->
                <!--android:tint="@color/colorBlueGray"-->
                <!--android:layout_gravity="bottom"-->
                <!--android:layout_marginLeft="@dimen/big_padding"-->
                <!---->
                <!--/>-->
            <!--<ImageView-->
                <!--android:id="@+id/iv_photo"-->
                <!--android:layout_width="@dimen/normal_padding"-->
                <!--android:layout_height="@dimen/normal_padding"-->
                <!--android:src="@drawable/ic_photo"-->
                <!--android:tint="@color/colorBlueGray"-->
                <!--android:layout_gravity="bottom"-->
                <!--android:layout_marginLeft="@dimen/big_padding"-->
                <!--/>-->
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_padding"/>
        <LinearLayout
            android:id="@+id/type2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:paddingTop="@dimen/small_padding"
            android:paddingRight="@dimen/normal_padding"
            android:paddingLeft="@dimen/normal_padding"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_qstart"
                android:textSize="@dimen/txt_text"
                android:textColor="@color/colorDeepGray"
                android:textStyle="bold"/>
            <ToggleButton
                android:id="@+id/btn_rorw"
                android:layout_width="@dimen/bigger_icon"
                android:layout_height="@dimen/normal_padding"
                android:background="@drawable/sel_qtype2"
                android:layout_gravity="bottom"
                android:textOn=""
                android:layout_marginRight="@dimen/tiny_padding"
                android:layout_marginLeft="@dimen/tiny_padding"
                android:textOff=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_qend"
                android:textStyle="bold"
                android:textColor="@color/colorDeepGray"
                android:textSize="@dimen/txt_text"/>
        </LinearLayout>

        <!--<ImageView-->
            <!--android:id="@+id/iv_questionpic"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:adjustViewBounds="true"/>-->
        <EditText
            android:id="@+id/et_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:paddingRight="@dimen/normal_padding"
            android:paddingLeft="@dimen/normal_padding"
            android:textSize="@dimen/txt_text"
            android:textColor="@color/colorDeepGray"
            android:hint="@string/q_basic_quesitonhint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q_basic_answer"
            android:textStyle="bold"
            android:textSize="@dimen/txt_text"
            android:textColor="@color/colorDeepGray"
            android:layout_marginTop="@dimen/normal_padding"
            android:layout_marginBottom="@dimen/tiny_padding"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">

        </android.support.v7.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/add_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/tiny_padding"
            android:gravity="center"
            android:paddingTop="@dimen/tiny_padding"
            android:paddingBottom="@dimen/tiny_padding">
            <ImageView
                android:layout_width="@dimen/big_padding"
                android:layout_height="@dimen/big_padding"
                android:src="@drawable/ic_add"
                android:tint="@color/colorGray"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q_basic_explanation"
            android:textStyle="bold"
            android:textSize="@dimen/txt_text"
            android:textColor="@color/colorDeepGray"
            android:layout_marginTop="@dimen/normal_padding"
            android:layout_marginBottom="@dimen/tiny_padding"
            />

        <EditText
            android:id="@+id/et_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:paddingRight="@dimen/normal_padding"
            android:paddingLeft="@dimen/normal_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/txt_text"
            android:textColor="@color/colorDeepGray"
            android:hint="@string/q_basic_explanationhint"/>




    </LinearLayout>

</RelativeLayout>