<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/small_padding"

    android:background="@color/colorBase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/bigger_padding"/>

        <LinearLayout
            android:id="@+id/type2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_qstart"
                android:textSize="@dimen/txt_text"
                android:textColor="@color/colorDeepGray"
                android:textStyle="bold"/>
            <ToggleButton
                android:id="@+id/tb_rorw"
                android:layout_width="@dimen/bigger_icon"
                android:layout_height="@dimen/normal_padding"
                android:background="@drawable/sel_qtype2"
                android:layout_gravity="bottom"
                android:textOn=""
                android:enabled="false"
                android:layout_marginRight="@dimen/tiny_padding"
                android:layout_marginLeft="@dimen/tiny_padding"
                android:textOff=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_qend"
                android:textStyle="bold"
                android:textColor="@color/colorDeepGray"
                android:textSize="@dimen/txt_text"/>
        </LinearLayout>
        <EditText
            android:id="@+id/et_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBase"
            android:textSize="@dimen/txt_text"
            android:text="Which of the following best explains about this term broid roina?"
            android:textStyle="bold"
            android:enabled="false"
            android:paddingBottom="@dimen/small_padding"

            android:textColor="@color/colorDeepGray"
            android:hint="@string/q_basic_quesitonhint"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">

        </android.support.v7.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/add_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightSkyBlue"
            android:layout_marginTop="@dimen/tiny_padding"
            android:gravity="center"
            android:paddingTop="@dimen/tiny_padding"
            android:paddingBottom="@dimen/tiny_padding"
            android:visibility="gone">
            <ImageView
                android:layout_width="@dimen/big_padding"
                android:layout_height="@dimen/big_padding"
                android:src="@drawable/ic_add"
                android:tint="@color/colorWhite"/>
        </RelativeLayout>


    </LinearLayout>





</RelativeLayout>